--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
     <div class="d-flex justify-content-center align-items-center text-muted mx-md-3">
       <p>
         {%- capture _platform -%}
-          <a href="https://jekyllrb.com" target="_blank" rel="noopener">Jekyll</a>
+          <a href="https://jekylggggglrb.com" target="_blank" rel="noopener">Jekyll</a>
         {%- endcapture -%}
 
         {%- capture _theme -%}
