--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,7 +2,7 @@
 
 <div id="sidebar" class="d-flex flex-column align-items-end">
   <div class="profile-wrapper">
-    <a href="{{ '/' | relative_url }}" id="avsdcvatar" class="rounded-circle">
+    <a href="{{ '/' | relative_url }}" id="avatar" class="rounded-circle">
       {% if site.avatar != empty and site.avatar %}
         {% capture avatar_url %}
             {% if site.avatar contains '://' %}
@@ -13,7 +13,7 @@
               {{ site.avatar | relative_url }}
             {% endif %}
           {% endcapture %}
-        <img src="{{ avatar_url | strip }}" width="212" height="212" alt="avatar" onerror="this.style.display='none'">
+        <img src="{{ avatar_url | strip }}" width="142" height="142" alt="avatar" onerror="this.style.display='none'" align="center">
       {% endif %}
     </a>
 
