--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,11 @@
   <div class="container px-lg-4">
     <div class="d-flex justify-content-center align-items-center text-muted mx-md-3">
       <p>
-        {{- Copyright '©' }}
+        {{- 'Copyright' }}
+      </p>
+      
+      <p>
+        {{- '©' }}
         {{ 'now' | date: '%Y' }}
         <a href="{{ site.social.links[0] }}">{{ site.social.name }}</a>.
         {% if site.data.locales[include.lang].copyright.brief %}
